Timer page reworked to focus on a single task, closes #90, closes #115.

--- a/src/Pomodoro.UI/Pages/Manage/Courses/Partials/_Dynamic.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Courses/Partials/_Dynamic.cshtml
@@ -11,7 +11,7 @@
 
 <div class="row" id="htmx-content">
     <div class="col-12 col-md mb-3">
-        <div id="all-study-tasks" class="row">
+        <div id="dynamic" class="row">
             <div class="col-12 mb-3">
                 <h5 class="mb-3">Tasks</h5>
                 <form hx-post
