--- a/src/Pomodoro.UI/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/src/Pomodoro.UI/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -7,7 +7,7 @@
     hx-page="Index"
     hx-page-handler="CreateStudyTask"
     hx-swap="innerHTML"
-    hx-target="#current-tasks"
+    hx-target="#current-task"
     hx-on::after-request="if(event.detail.successful) { this.reset(); }"
     x-data="{
         selectedLabels: [],
