Added dropdown in nav for labels and tasks.

--- a/src/StudyPomo.UI/Pages/Manage/Labels/Index.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Labels/Index.cshtml
@@ -200,5 +200,5 @@
 
     <partial name="_ValidationScriptsPartial" />
 
-    <script src="~/Pages/Labels/Index.cshtml.js" asp-append-version="true"></script>
+    <script src="~/Pages/Manage/Labels/Index.cshtml.js" asp-append-version="true"></script>
  }
