--- a/src/StudyPomo.UI/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/src/StudyPomo.UI/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -63,7 +63,7 @@
                             <ul class="dropdown-menu">
                                 <li class="dropdown-item">
                                     @*Create new label*@
-                                    <a asp-page="../Labels/Index" class="text-opacity-75">
+                                    <a asp-page="/Manage/Labels/Index" class="text-opacity-75">
                                         Create New <i class="bi bi-plus"></i>
                                     </a>
                                 </li>
