All courses page added with crud.

--- a/src/StudyPomo.UI/Pages/Manage/Labels/Index.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Labels/Index.cshtml
@@ -45,7 +45,7 @@
                             <span class="text-muted">@Model.TaskLabels[i].Description</span>
                         </div>
                         <div class="d-none d-lg-block col-md-2">
-                            <span class="text-muted">@Model.TaskLabels[i].StudyTasks.Count() tasks</span>
+                            <span class="text-muted">@Model.TaskLabels[i].StudyTasks.Count() task(s)</span>
                         </div>
                         <div class="col-md-2 text-end text-nowrap">
                             <div class="d-flex align-items-center justify-content-end">
