Added course to manage dropdown.

--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -66,6 +66,9 @@
                                             <li>
                                                 <a class="dropdown-item" asp-page="/Manage/Tasks/All">Tasks</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" asp-page="/Manage/Courses/All">Courses</a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </li>
