--- a/src/StudyPomo.UI/Pages/Manage/Courses/All.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Courses/All.cshtml
@@ -7,7 +7,7 @@
 
 <div class="mb-2">
     <div class="d-flex justify-content-between align-items-end mb-3">
-        <h5 class="mb-0">All Courses</h5>
+        <h5 class="mb-0">Courses</h5>
     </div>
     <ul class="list-group">
         <li class="list-group-item bg-body-tertiary">
