--- a/src/StudyPomo.UI/Pages/Manage/Tasks/All.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Tasks/All.cshtml
@@ -315,7 +315,7 @@
 
 <div class="mb-2">
     <div class="d-flex justify-content-between align-items-end mb-3">
-        <h5 class="mb-0">All Tasks</h5>
+        <h5 class="mb-0">Tasks</h5>
         <div class="d-flex align-items-center">
             @if (Model.FilterActive)
             {
