Added course field to study task dialog.

--- a/src/StudyPomo.UI/Pages/Manage/Courses/Index.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Courses/Index.cshtml
@@ -182,7 +182,8 @@
         Model.TimeZone,
         mapper.Map<StudyTaskUpdate>(task),
         Model.TaskLabels,
-        Model.TaskPriorities
+        Model.TaskPriorities,
+        Model.Courses
     ))
 }
 
