--- a/src/StudyPomo.UI/Pages/Manage/Tasks/All.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Tasks/All.cshtml
@@ -68,6 +68,54 @@
                                     <input class="form-control form-control-sm" asp-for="StudyTaskCreate.Deadline" />
                                     <span asp-validation-for="StudyTaskCreate.Deadline" class="text-danger form-text"></span>
                                 </div>
+                                <div class="mb-2"
+                                     x-data="{ selectedCourseId: null }">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="d-flex align-items-center">
+                                            <label class="form-label me-2 my-0">Course:</label>
+                                            <template x-if="selectedCourseId != null">
+                                                @foreach (var course in Model.Courses)
+                                                {
+                                                    <template x-if="selectedCourseId == @course.Id">
+                                                        <div style="cursor: pointer;" x-on:click.prevent.stop="selectedCourseId = null">
+                                                            <badge text="@course.Name" color="@course.HexColor"></badge>
+                                                        </div>
+                                                    </template>
+                                                }
+                                            </template>
+                                            <template x-if="selectedCourseId == null">
+                                                <div class="dropdown">
+                                                    <a class="text-muted" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                        Choose <i class="bi bi-chevron-expand"></i>
+                                                    </a>
+                                                    <ul class="dropdown-menu">
+                                                        <li class="dropdown-item">
+                                                            @*Create new label*@
+                                                            <a asp-page="/Manage/Courses/Index" class="text-opacity-75">
+                                                                Create New <i class="bi bi-plus"></i>
+                                                            </a>
+                                                        </li>
+                                                        @foreach (var course in Model.Courses)
+                                                        {
+                                                            <li>
+                                                                <a class="dropdown-item" href="#"
+                                                                   x-on:click.prevent.stop="selectedCourseId = @course.Id">
+                                                                    <div class="d-flex justify-content-between align-items-center">
+                                                                        <badge text="@course.Name" color="@course.HexColor"></badge>
+                                                                        <i class="bi"
+                                                                           :class="selectedCourseId == @course.Id ? 'bi-check' :''">
+                                                                        </i>
+                                                                    </div>
+                                                                </a>
+                                                            </li>
+                                                        }
+                                                    </ul>
+                                                </div>
+                                            </template>
+                                        </div>
+                                    </div>
+                                    <input type="hidden" name="StudyTaskCreate.CourseId" :value="selectedCourseId">
+                                </div>
                                 <div class="mb-2">
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="d-flex align-items-center">
@@ -420,13 +468,16 @@
                                 <i class="bi bi-plus"></i>
                                 <span class="ext-decoration-none text-opacity-50">Add New Task</span>
                             </div>
-                            <div class="d-none d-md-block col-md-4">
+                            <div class="d-none d-md-block col-md-3">
                                 <span class="text-opacity-50">Due...</span>
+                            </div>
+                            <div class="d-none d-lg-block col-md-1">
+                                <span class="text-opacity-50">Priority...</span>
                             </div>
                             <div class="d-none d-lg-block col-md-1">
                                 <span class="text-opacity-50">Course...</span>
                             </div>
-                            <div class="col-md-2 text-end text-nowrap">
+                            <div class="col-md-1 text-end text-nowrap">
                             </div>
                         </div>
                     </a>
@@ -441,7 +492,8 @@
                 Model.TimeZone,
                 mapper.Map<StudyTaskUpdate>(task),
                 Model.TaskLabels,
-                Model.TaskPriorities
+                Model.TaskPriorities,
+                Model.Courses
                 ))
     }
 </div>
