Fixed create new course link.

--- a/src/StudyPomo.UI/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
+++ b/src/StudyPomo.UI/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
@@ -67,7 +67,7 @@
                         <ul class="dropdown-menu">
                             <li class="dropdown-item">
                                 @*Create new label*@
-                                <a asp-page="/Manage/Courses/Index" class="text-opacity-75">
+                                <a asp-page="/Manage/Courses/All" class="text-opacity-75">
                                     Create New <i class="bi bi-plus"></i>
                                 </a>
                             </li>
@@ -88,7 +88,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>>
+            </div>
             <input type="hidden" name="StudyTaskUpdate.CourseId" :value="selectedCourseId">
         </div>
         <div class="mb-2">
