Modified dropdown caret style.

--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -56,8 +56,9 @@
                                 </li>
                                 <li class="nav-item">
                                     <div class="dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                             Manage
+                                            <i style="font-size: 0.9em" class="ms-1 bi bi-chevron-down"></i>
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li>
