--- a/src/StudyPomo.UI/Pages/Manage/Courses/All.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Courses/All.cshtml
@@ -4,6 +4,52 @@
 }
 
 
+<div class="modal fade" id="course-create-modal" tabindex="-1" aria-labelledby="courseModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header mb-3">
+                <h5 class="modal-title" id="courseModalLabel">Add a Course</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="mb-1 px-3">
+                <small>Fill in the fields below to start adding tasks to this course.</small>
+            </div>
+            <hr class="text-secondary mb-0" />
+            <form method="post" asp-page-handler="CreateCourse">
+                <div class="modal-body" x-data="{ name: '', color: '#385091', isValid: true }">
+                    <div class="mb-3">
+                        <label asp-for="CourseCreate.Name" class="form-label"></label>
+                        <input x-model="name" asp-for="CourseCreate.Name" class="form-control form-control-sm" />
+                        <span asp-validation-for="CourseCreate.Name" class="text-danger form-text"></span>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="CourseCreate.Description" class="form-label"></label>
+                        <input asp-for="CourseCreate.Description" class="form-control form-control-sm" />
+                        <span asp-validation-for="CourseCreate.Description" class="text-danger form-text"></span>
+                    </div>
+                    <div class="mb-2">
+                        <label asp-for="CourseCreate.HexColor" class="form-label">Color</label>
+                        <div class="input-group input-group-sm">
+                            <button x-on:click="color = '#' + Math.floor(Math.random() * 16777215).toString(16).padStart(6, '0'); isValid = true" type="button" class="btn btn-secondary mb-3"><i class="bi bi-arrow-counterclockwise"></i></button>
+                            <input x-model="color" x-on:input="isValid = isValidHexColor(color)" type="text" id="user-color" class="form-control mb-3" placeholder="Enter a color (e.g., #ff5733)" asp-for="CourseCreate.HexColor">
+                        </div>
+                        <div x-show="!isValid" class="text-danger">Invalid color format. Please enter a valid hex color.</div>
+                        <span asp-validation-for="CourseCreate.HexColor" class="text-danger form-text"></span>
+                    </div>
+                    <div class="mb-3" x-show="name.trim() !== ''">
+                        <span>Preview:</span>
+                        <span class="badge" :style="'background-color: ' + color" x-text="name"></span>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" id="submitButton" class="btn btn-primary">Add</button>
+                </div>
+            </form>
+
+        </div>
+    </div>
+</div>
 
 <div class="mb-2">
     <div class="d-flex justify-content-between align-items-end mb-3">
@@ -16,13 +62,13 @@
                     <div class="col-md-3">
                         <span><strong>Course</strong></span>
                     </div>
-                    <div class="d-none d-md-block col-md-4">
+                    <div class="d-none d-md-block col-md-5">
                         <span><strong>Description</strong></span>
                     </div>
-                    <div class="d-none d-lg-block col-md-1">
+                    <div class="d-none d-lg-block col-md-2">
                         <span><strong># of Tasks</strong></span>
                     </div>
-                    <div class="d-none d-lg-block col-md-2">
+                    <div class="d-none d-lg-block col-md-1">
                         <span><strong>Status</strong></span>
                     </div>
                     <div class="col-md-1 text-end text-nowrap">
@@ -39,13 +85,13 @@
                         <div class="col-md-3 d-flex flex-nowrap align-items-center">
                             <badge text="@course.Name" color="@course.HexColor"></badge>
                         </div>
-                        <div class="d-none d-md-block col-md-4">
+                        <div class="d-none d-md-block col-md-5">
                             <span>@course.Description</span>
                         </div>
-                        <div class="d-none d-lg-block col-md-1">
+                        <div class="d-none d-lg-block col-md-2">
                             <span>@(course.StudyTasks.Count) task(s)</span>
                         </div>
-                        <div class="d-none d-lg-block col-md-2">
+                        <div class="d-none d-lg-block col-md-1">
                             @if (course.Archived)
                             {
                                 <span class="badge bg-danger">Archived</span>
@@ -81,6 +127,28 @@
                 </div>
             </li>
         }
+        <li class="list-group-item custom-hover">
+            <a data-bs-toggle="modal" data-bs-target="#course-create-modal" class="row align-items-center">
+                <div class="d-flex align-items-center justify-content-between">
+                    <div class="col-md-3">
+                        <i class="bi bi-plus"></i>
+                        <span class="ext-decoration-none text-opacity-50">Add New Course</span>
+                    </div>
+                    <div class="d-none d-md-block col-md-5">
+                        <span class="text-opacity-50">Description...</span>
+                    </div>
+                    <div class="d-none d-lg-block col-md-2">
+                        <span class="text-opacity-50"># of Tasks...</span>
+                    </div>
+                    <div class="d-none d-lg-block col-md-1">
+                        <span class="text-opacity-50">Status...</span>
+                    </div>
+                    <div class="col-md-1 text-end text-nowrap">
+                        <span class="text-opacity-50">Actions...</span>
+                    </div>
+                </div>
+            </a>
+        </li>
     </ul>
     @foreach (var course in Model.Courses)
     {
@@ -129,3 +197,9 @@
         </div>
     }
 </div>
+
+@section Scripts {
+
+    <partial name="_ValidationScriptsPartial" />
+
+}
