--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using StudyPomo.Library.Models.Identity
 @inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <!DOCTYPE html>
 <html lang="en" x-data="{
@@ -52,25 +53,12 @@
                         {
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-page="/Manage/Index">Dashboard</a>
-                                </li>
-                                <li class="nav-item">
                                     <div class="dropdown">
-                                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <a class="nav-link" data-bs-toggle="offcanvas" href="#nav-offcanvas" role="button" aria-controls="nav-offcanvas">
+                                            <i class="bi bi-chevron-bar-right"></i>
                                             Manage
-                                            <i style="font-size: 0.9em" class="ms-1 bi bi-chevron-down"></i>
+                                            
                                         </a>
-                                        <ul class="dropdown-menu">
-                                            <li>
-                                                <a class="dropdown-item" asp-page="/Manage/Labels/Index">Labels</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" asp-page="/Manage/Tasks/All">Tasks</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" asp-page="/Manage/Courses/All">Courses</a>
-                                            </li>
-                                        </ul>
                                     </div>
                                 </li>
                             </ul>
@@ -92,6 +80,40 @@
                     </div>
                 </div>
             </nav>
+            <div class="offcanvas offcanvas-start rounded-end-4" tabindex="-1" id="nav-offcanvas" aria-labelledby="nav-offcanvas-label">
+                <div class="offcanvas-header">
+                    <div>
+                        <h5 class="offcanvas-title" id="nav-offcanvas-label">StudyPomo</h5>
+                        <a class="small text-muted" asp-area="Identity" asp-page="/Account/Manage/Index"><i class="bi bi-person-fill me-1"></i>@UserManager.GetUserName(User)</a>
+                    </div>
+                    
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-page="/Manage/Index">
+                                <i class="bi bi-house-door me-1 text-muted"></i> Home
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-page="/Manage/Labels/Index">
+                                <small><i class="bi bi-tags me-1 text-muted"></i></small> Labels
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-page="/Manage/Tasks/All">
+                                <small><i class="bi bi-list-task me-1 text-muted"></i></small> Tasks
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-page="/Manage/Courses/All">
+                                <small><i class="bi bi-book me-1 text-muted"></i></small> Courses
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </header>
         <div class="d-flex flex-column pt-2 h-100">
             <main role="main" class="container-sm">
