--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
             <div class="offcanvas offcanvas-start rounded-end-4" tabindex="-1" id="nav-offcanvas" aria-labelledby="nav-offcanvas-label">
                 <div class="offcanvas-header">
                     <div>
-                        <h5 class="offcanvas-title" id="nav-offcanvas-label">StudyPomo</h5>
+                        <h5 class="offcanvas-title" id="nav-offcanvas-label">studypomo</h5>
                         <a class="small text-muted" asp-area="Identity" asp-page="/Account/Manage/Index"><i class="bi bi-person-fill me-1"></i>@UserManager.GetUserName(User)</a>
                     </div>
                     
