--- a/src/StudyPomo.UI/wwwroot/lib/bootstrap/scss/custom.css
+++ b/src/StudyPomo.UI/wwwroot/lib/bootstrap/scss/custom.css
@@ -11843,6 +11843,17 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+[data-bs-theme=light] .nav-link.illuminate {
+  background-color: transparent;
+  transition: background-color 0.3s ease;
+  padding: 0.3rem 0.6rem;
+  border-radius: 0.4rem;
+  color: #212529 !important;
+}
+[data-bs-theme=light] .nav-link.illuminate:hover {
+  background-color: #f2f2f2 !important;
+  color: #212529 !important;
+}
 [data-bs-theme=light] .list-group-item.bg-hover:hover {
   background-color: #f8f9fa;
 }
@@ -12017,6 +12028,17 @@ textarea.form-control-lg {
   outline: none;
 }
 
+[data-bs-theme=dark] .nav-link.illuminate {
+  background-color: transparent;
+  transition: background-color 0.3s ease;
+  padding: 0.3rem 0.6rem;
+  border-radius: 0.4rem;
+  color: #dee2e6 !important;
+}
+[data-bs-theme=dark] .nav-link.illuminate:hover {
+  background-color: #2c3237 !important;
+  color: #dee2e6 !important;
+}
 [data-bs-theme=dark] .list-group-item.bg-hover:hover {
   background-color: #2b3035;
 }
