Added quick actions to offcanvas.

--- a/src/StudyPomo.UI/Pages/Manage/Index.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Index.cshtml
@@ -280,7 +280,7 @@
         
         @if (Model.StudyTasks.Where(u => !u.Completed).Count() > 0)
         {
-            <a asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Start Study Session</a>
+            <a asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Enter Pomodoro</a>
         }
     </div>
     <ul class="list-group">
