--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -110,6 +110,15 @@
                             </a>
                         </li>
                     </ul>
+                    <hr />
+                    <ul class="navbar-nav">
+                        <small class="fw-semibold mb-1" style="padding-left: 0.6rem">Quick Actions</small>
+                        <li class="nav-item">
+                            <a class="nav-link illuminate" asp-page="/Timer/Index">
+                                <i class="bi bi-clock me-1 text-muted"></i> Enter Pomodoro
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </header>
