--- a/src/StudyPomo.UI/Pages/Manage/Tasks/All.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Tasks/All.cshtml
@@ -359,15 +359,24 @@
     <div class="d-flex justify-content-between align-items-end mb-3">
         <h5 class="mb-0">Tasks</h5>
         <div class="d-flex align-items-center">
-            @if (Model.FilterActive)
+            @if (Model.StudyTasks.Count > 0)
             {
-                <a asp-page="/Manage/Tasks/All" asp-route-filter="@null">Reset Filter</a>
+                <div class="d-flex align-items-center">
+                    @if (Model.FilterActive)
+                    {
+                        <a asp-page="/Manage/Tasks/All" asp-route-filter="@null">Reset Filter</a>
+                        <div class="mt-1 h-100 mx-3">
+                            <div class="vr h-100"></div>
+                        </div>
+
+                    }
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#sort-modal">Filter <i class="bi bi-filter"></i></a>
+                </div>
                 <div class="mt-1 h-100 mx-3">
                     <div class="vr h-100"></div>
                 </div>
-                
+                <a href="#" data-bs-toggle="modal" data-bs-target="#study-task-create-modal"><i class="bi bi-plus-lg me-2"></i>Add New Task</a>
             }
-            <a href="#" data-bs-toggle="modal" data-bs-target="#sort-modal">Filter <i class="bi bi-filter"></i></a>
         </div>
         
     </div>
