--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -53,27 +53,19 @@
                         {
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <div class="dropdown">
-                                        <a class="nav-link" data-bs-toggle="offcanvas" href="#nav-offcanvas" role="button" aria-controls="nav-offcanvas">
-                                            Manage
-                                        </a>
-                                    </div>
+                                    <a class="nav-link" data-bs-toggle="offcanvas" href="#nav-offcanvas" role="button" aria-controls="nav-offcanvas">
+                                        Manage
+                                    </a>
+                                    @* <a data-bs-toggle="offcanvas" href="#nav-offcanvas" role="button" aria-controls="nav-offcanvas" style="padding: 0.10rem 0.45rem" class="border rounded-2">
+                                        <i style="font-size: 1.2rem" class="bi bi-list"></i>
+                                    </a> *@
                                 </li>
                             </ul>
                             <div class="d-none d-sm-block mt-1 h-100 mx-3">
                                 <div class="vr h-100"></div>
                             </div>
                         }
-                        <div class="dropdown">
-                            <i style="cursor: pointer" :class="theme == 'dark' ? 'bi bi-moon-stars' : 'bi bi-sun-fill'" id="themeDropdown" data-bs-toggle="dropdown" aria-expanded="false"></i>
-                            <ul class="dropdown-menu" aria-labelledby="themeDropdown">
-                                <li><a class="dropdown-item" style="cursor: pointer" hx-post hx-swap="none" hx-page="Index" hx-page-handler="SetPreferredTheme" hx-route-theme="light" x-on:click="setTheme('light')"><i class="bi bi-sun-fill"></i> Light</a></li>
-                                <li><a class="dropdown-item" style="cursor: pointer" hx-post hx-swap="none" hx-page="Index" hx-page-handler="SetPreferredTheme" hx-route-theme="dark" x-on:click="setTheme('dark')"><i class="bi bi-moon-stars"></i> Dark</a></li>
-                            </ul>
-                        </div>
-                        <div class="d-none d-sm-block mt-1 h-100 mx-3">
-                            <div class="vr h-100"></div>
-                        </div>
+                        
                         <partial name="_LoginPartial" />
                     </div>
                 </div>
@@ -118,6 +110,36 @@
                                 <i class="bi bi-clock me-1 text-muted"></i> Enter Pomodoro
                             </a>
                         </li>
+                    </ul>
+                    <hr />
+                    <ul class="navbar-nav">
+                        <small class="fw-semibold mb-1" style="padding-left: 0.6rem">Account</small>
+                        <li class="nav-item">
+                            <a class="nav-link illuminate" asp-area="Identity" asp-page="/Account/Manage/Index">
+                                <i class="bi bi-gear me-1 text-muted"></i> Settings
+                            </a>
+                        </li>
+                        <li x-show="theme == 'dark'" class="nav-item">
+                            <a class="nav-link illuminate" style="cursor: pointer;" hx-post hx-swap="none" hx-page="Index" hx-page-handler="SetPreferredTheme" hx-route-theme="light" x-on:click="setTheme('light')">
+                                <i class="bi bi-sun me-1 text-muted"></i> Change To Light Mode
+                            </a>
+                        </li>
+                        <li x-show="theme == 'light'" class="nav-item">
+                            <a class="nav-link illuminate" style="cursor: pointer;" hx-post hx-swap="none" hx-page="Index" hx-page-handler="SetPreferredTheme" hx-route-theme="dark" x-on:click="setTheme('dark')">
+                                <i class="bi bi-moon-stars me-1 text-muted"></i> Change To Dark Mode
+                            </a>
+                        </li>
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <li class="nav-item">
+                                <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
+                                    <button id="logout" type="submit" class="nav-link illuminate w-100 text-start">
+                                        <i class="bi bi-arrow-bar-right me-1 text-muted"></i> Logout
+                                    </button>
+                                </form>
+                            </li>
+                            
+                        }
                     </ul>
                 </div>
             </div>
