--- a/src/StudyPomo.UI/Pages/Shared/_LoginPartial.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_LoginPartial.cshtml
@@ -11,11 +11,11 @@
     <li class="nav-item">
         <a id="manage" class="nav-link fw-semibold" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)</a>
     </li>
-    <li class="nav-item">
+    @* <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
             <button id="logout" type="submit" class="nav-link">Logout</button>
         </form>
-    </li>
+    </li> *@
 }
 else
 {
